# rust-mcp

./: Cargo.toml  Makefile.toml  README.md
src/: lib.rs  main.rs
src/mcp/: mod.rs  schema.rs
src/mcp/server/: error.rs  mod.rs  notification.rs  request.rs  utils.rs
src/mcp/server/sse/: mod.rs
src/mcp/tests/: mod.rs  schema_test.rs
