[package]
edition = "2021"
name = "rust-mcp"
version = "0.1.0"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.1", default-features = true, features = ["macros"] }
axum-derive-error = "0.1.0"
axum-extra = { version = "0.10.0", features = ["query"] }
bytes = "1.9.0"
futures = "0.3.31"
http-body-util = "0.1.2"
ordered-float = { version = "4.6.0", features = ["serde"] }
querystring = "1.1.0"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = { version = "1.0.135" }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.12.0", features = ["v4"] }
